--- a/projects.html
+++ b/projects.html
@@ -1,64 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&family=Cute+Font&family=Jersey+25&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Psalm de Mesa: 11TDG Portfolio</title>
+    <title>Psalm de Mesa: 11TDG Portfolio – Project 1</title>
+    <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&family=Cute+Font&family=Jersey+25&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images/Haircuts i MIGHT get.jpg" type="image/x-icon">
 </head>
+
 <body>
-    <div class="navigation">
-        <a href = "index.html#homepage" style="text-decoration: none"; class="home">Home 🏠</a>
+    <nav class="navigation">
+        <a href="index.html#homepage" class="home" style="text-decoration: none;">Home 🏠</a>
         <ul>
-            <a href = "index.html#aboutme" class="aboutButton">About ✍🏼</a>
-            <a href = "index.html#tools" class="toolsButton">Tools 🔦</a>
-            <a href = "index.html#projects" class="projectsButton">Projects 🔨</a>
+            <li><a href="index.html#aboutme" class="aboutButton">About ✍🏼</a></li>
+            <li><a href="index.html#tools" class="toolsButton">Tools 🔦</a></li>
+            <li><a href="index.html#projects" class="projectsButton">Projects 🔨</a></li>
         </ul>
-    </div> 
-<div class="container2">
-    <div id="projectOne"class="column2">
-        <h1 class="projectTitle">Project 1: Low Poly Character</h1>
-        <h3 class="title">Design Considerations</h3>
-        <h5 class="subtitle">Overview</h5>
-        <p>I will be creating a Low Poly Character for a game inspired by Mobile Legends. This will include sketching, modelling, and animating the character. The character will be modelled in blender as well as rigging the character to animate it while idle, running, etc.</p>
-        <h5 class="subtitle">End Users</h5>
-        <p>The end user of this project would be 14-20 year old people that are into Mobile Legends as well as people who likes playing fictional games preferably people above the age of 14 as this game is designed to be violent. People at this age prefer graphics/characters to be detailed and creative. This includes adding levels to the character and to see growth in the character. It would also require game money that could be purchased at a low price as advertising it expensive doesn't attract that much people to buy the product. Adding different second-lead characters would also help attract people as they can engage and interact with other characters played by different people.</p>
-        <h5 class="subtitle">Requirements</h5>
-            <p>The character should have the following:</p>
+    </nav>
+
+    <section class="container2" id="projectOne">
+        <div class="column2">
+            <h1 class="projectTitle">Project 1: Low Poly Character</h1>
+
+            <h3 class="title">Design Considerations</h3>
+
+            <h5 class="subtitle">Overview</h5>
+            <p>
+                I will be creating a Low Poly Character for a game inspired by <em>Mobile Legends</em>. 
+                This will include sketching, modeling, and animating the character. 
+                The model will be built and rigged in Blender to create idle, running, and other animations.
+            </p>
+
+            <h5 class="subtitle">End Users</h5>
+            <p>
+                The end users of this project are players aged 14–20 who enjoy games like 
+                <em>Mobile Legends</em> and other fictional action games. This audience values 
+                detailed, creative character designs and engaging gameplay. 
+                Adding levels, skins, and in-game purchases can enhance player engagement. 
+                Incorporating secondary characters will also encourage interaction and replayability.
+            </p>
+
+            <h5 class="subtitle">Requirements</h5>
+            <p>The character should include the following features:</p>
             <ul>
-            <p>Body</p>
-            <p>Head</p>
-            <p>Hair</p>
-            <p>Fox Ears</p>
-            <p>Neck</p>
-            <p>Shoulders</p>
-            <p>Torso</p>
-            <p>Legs</p>
-            <p>Feet</p>
-            <p>Tail</p>
-            <p>Different Skins</p>
-            <p>Weapon</p>
+                <li>Body</li>
+                <li>Head</li>
+                <li>Hair</li>
+                <li>Fox Ears</li>
+                <li>Neck</li>
+                <li>Shoulders</li>
+                <li>Torso</li>
+                <li>Legs</li>
+                <li>Feet</li>
+                <li>Tail</li>
+                <li>Different Skins</li>
+                <li>Weapon</li>
             </ul>
-        <h5 class="subtitle">Specifications</h5>
-            <p>The upper torso will be narrower than the lower torso.</p>
-            <p>The colours of the character should incorporate the colours of a fox which are red, orange, white, black.</p>
-            <p>The weapon of the character should be related to fictional life. Maybe create a gun that doesn't shoot bullets.</p>
-    <br>
-        <h3 class="title">Relevant Implications</h3>
-        <h6 class="subtitle">Aesthetics</h6>
-        <p>To maintain the aesthetics of my character, I will continue to use the same colour pallete throughout this project and make sure that the aesthetics will also please my end-users. I would also ask feedback from my peers to gather information about improvement and what I could change to make the product look proper.</p>
-        <h6 class="subtitle">Usability</h6>
-        <p>I will be testing every now and then to check whether the changes that I have made with aesthetics as well as functionality has affected the usability of my character. By doing this step, I can avoid bigger problems as I can easily keep track of what part of the process has affected the usability of my character. I will also gather feedback from my peers and ask how their experience with my character, whether the quality of my character is okay and not experiencing problems.</p>
-        <h6 class="subtitle">Functionality</h6>
-        <p>To make sure that my character is functioning properly, I will ensure that the steps that I have made throughout this project will make my character function the way that my end-users want it to function. I will also make sure that my character functions properly and is not affecting any other factor outside functionality such as usability and aesthetics.</p>
-        <h6 class="subtitle">Intellectual Property</h6>
-        <p>This character is inspired by a character from the game 'Mobile Legends: Bang Bang' named 'Nana' who is a sweet Leonin. My character on the other hand is a human fox. By changing features such as colours, face shape, and overall aura, I would be able to make my character different from existing characters. I would also not allow people to copy my work as it is my right to have my work protected but people can use my character as an inspiration for theirs.</p>
-    </div>
-    <div class="column2">
-        <img class= "turnaround" src="images/official turnaround.jpg" alt="character turnaround"/>
-    </div>
-</div>
-    <br>
+
+            <h5 class="subtitle">Specifications</h5>
+            <ul>
+                <li>The upper torso will be narrower than the lower torso.</li>
+                <li>The character’s color palette should reflect fox tones — red, orange, white, and black.</li>
+                <li>The weapon should be fantasy-themed (e.g., a gun that doesn’t shoot bullets).</li>
+            </ul>
+
+            <h3 class="title">Relevant Implications</h3>
+
+            <h6 class="subtitle">Aesthetics</h6>
+            <p>
+                To maintain consistent aesthetics, I will use a cohesive color palette 
+                and design style throughout the project. I will also seek peer feedback 
+                to identify visual improvements and ensure the final design appeals to my target audience.
+            </p>
+
+            <h6 class="subtitle">Usability</h6>
+            <p>
+                I will regularly test my character to ensure that design and functionality 
+                updates do not negatively impact usability. Peer feedback will help 
+                identify any performance or quality issues early in development.
+            </p>
+
+            <h6 class="subtitle">Functionality</h6>
+            <p>
+                I will ensure the character functions properly in animations and interactions. 
+                Each step of the process will be checked to confirm that functionality aligns 
+                with the expectations of my end users while maintaining quality and design standards.
+            </p>
+
+            <h6 class="subtitle">Intellectual Property</h6>
+            <p>
+                This character is inspired by <em>Nana</em> from <em>Mobile Legends: Bang Bang</em>. 
+                However, my design will be original — featuring a human-fox hybrid with unique colors, 
+                facial structure, and overall appearance. I will protect my work from direct copying, 
+                but others may use it as inspiration for their own creations.
+            </p>
+        </div>
+
+        <div class="column2">
+            <img class="turnaround" src="images/official turnaround.jpg" alt="Character turnaround design">
+        </div>
+    </section>
 </body>
+</html>
