--- a/projects2.html
+++ b/projects2.html
@@ -1,54 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&family=Cute+Font&family=Jersey+25&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Psalm de Mesa: 11TDG Portfolio</title>
+    <title>Psalm de Mesa: 11TDG Portfolio – Project 2</title>
+    <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&family=Cute+Font&family=Jersey+25&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images/Haircuts i MIGHT get.jpg" type="image/x-icon">
 </head>
+
 <body>
-    <div class="navigation">
-        <a href = "index.html#homepage" style="text-decoration: none"; class="home">Home 🏠</a>
+    <nav class="navigation">
+        <a href="index.html#homepage" class="home" style="text-decoration: none;">Home 🏠</a>
         <ul>
-            <a href = "index.html#aboutme" class="aboutButton">About ✍🏼</a>
-            <a href = "index.html#tools" class="toolsButton">Tools 🔦</a>
-            <a href = "index.html#projects" class="projectsButton">Projects 🔨</a>
+            <li><a href="index.html#aboutme" class="aboutButton">About ✍🏼</a></li>
+            <li><a href="index.html#tools" class="toolsButton">Tools 🔦</a></li>
+            <li><a href="index.html#projects" class="projectsButton">Projects 🔨</a></li>
         </ul>
-    </div> 
-<div class="container2">
-    <div id="projectTwo"class="column2">
-              <h1 class="projectTitle">Project 2: Python Coded Game</h1>
-        <h3 class="title">Design Considerations</h3>
-        <h5 class="subtitle">Overview</h5>
-        <p>I will be coding a Python focused game. It is about words and basically like a Hangman program. It will be scrambled each round and you can play multiple times.</p>
-        <h5 class="subtitle">End Users</h5>
-        <p>The end user of this program would be people who likes words and english in general or people that want to expand their vocabulary in a fun way. The age group that this program would be appropriate for is for aged 6+. 
-            What my end-user might need: A easy to use and navigate programme without having to experience errors.
-            What my end-user might want: A level of difficulty in the game that can give them a thrill like experience while playing the game.
-        </p>
-        <h5 class="subtitle">Requirements</h5>
-            <p>What should this include:</p>
+    </nav>
+
+    <section class="container2" id="projectTwo">
+        <div class="column2">
+            <h1 class="projectTitle">Project 2: Python Coded Game</h1>
+
+            <h3 class="title">Design Considerations</h3>
+
+            <h5 class="subtitle">Overview</h5>
+            <p>
+                I developed a Python-based word game inspired by <em>Hangman</em>. 
+                Each round features scrambled words, and players can replay the game multiple times 
+                for new word challenges.
+            </p>
+
+            <h5 class="subtitle">End Users</h5>
+            <p>
+                The target audience for this game includes individuals aged 6 and above 
+                who enjoy word puzzles, English, or vocabulary challenges. 
+                Users should have an easy, error-free experience and the option to choose 
+                difficulty levels for added excitement.
+            </p>
+
+            <h5 class="subtitle">Requirements</h5>
             <ul>
-                <p>A list of words</p>
-                <p>Randomiser</p>
-                <p>Different levels of words</p>
+                <li>A list of words</li>
+                <li>A randomizer to shuffle words</li>
+                <li>Multiple difficulty levels</li>
             </ul>
-        <h5 class="subtitle">Specifications</h5>
-            <p>A game that will showcase a whole list of words.</p>
-            <p>It should be fast and won't cause any errors when the input is different.</p>
-            <p>This would be a game that any user can play without any restrictions.</p>
-    <br>
-        <h3 class="title">Relevant Implications</h3>
-        <h6 class="subtitle">Aesthetics</h6>
-        <p>To maintain and make my code look good, I will be making sure to use indents as well as spaces in between code to help our code to be futureproofed. I will also make sure that the letters will be easy to read.</p>
-        <h6 class="subtitle">Usability</h6>
-        <p>I will be conducting multiple tests to ensure that the user will not be able to experience any errors and I will do this by letting my peers share their feedback regarding on this python programme.</p>
-        <h6 class="subtitle">Functionality</h6>
-        <p>To ensure that the programme works the way it should work, I will be making sure to remember the wants and needs of my end users which is to have a smooth operating prgramme that has the right level of difficulty.</p>
-  </div>
 
+            <h5 class="subtitle">Specifications</h5>
+            <ul>
+                <li>The game should display and scramble words from a list.</li>
+                <li>It must handle different inputs without causing errors.</li>
+                <li>It should be accessible and easy for anyone to play.</li>
+            </ul>
 
-</div>
+            <h3 class="title">Relevant Implications</h3>
+
+            <h6 class="subtitle">Aesthetics</h6>
+            <p>
+                I ensured the code was clean and readable through consistent indentation and spacing. 
+                Clear text formatting helps future edits and improves overall code clarity.
+            </p>
+
+            <h6 class="subtitle">Usability</h6>
+            <p>
+                I tested the program multiple times and gathered peer feedback to ensure that 
+                players experience no crashes or logic errors during gameplay.
+            </p>
+
+            <h6 class="subtitle">Functionality</h6>
+            <p>
+                To meet user expectations, I ensured smooth performance and balanced difficulty levels. 
+                The program operates as intended while maintaining a fun and engaging experience.
+            </p>
+        </div>
+    </section>
 </body>
+</html>
