--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
         <h1 class="name">Psalm Emmanuelle De Mesa</h1>
         <h3 class="year">Year 11 Portfolio</h3>
 
-        <img class="homepicture1" src="images/me pc.jpg" alt="Psalm de Mesa working at a computer">
-        <img class="homepicture2" src="images/me pc2.jpg" alt="Psalm de Mesa coding project">
+        <img class="homepicture1" src="images/image0 (4).jpeg" alt="Psalm de Mesa wearing glasses">
+        <img class="homepicture2" src="images/me pc2.jpg" alt="Psalm de Mesa bored">
+
         <section class="contact" id="contact">
             <h2>Contact Me</h2>
             <p>Have a question or want to work together? Send me a message below!</p>
